--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <label><span>pass</span><input type="text" name="password" /></label>
       <label><span>mail</span><input type="text" name="email" /></label>
       <label><span>phone</span><input type="text" name="phone" /></label>
+      <label for=""><span>spam</span>
+      <textarea name="spam" id=""></textarea>
+      </label>
 
       <h4>Rules:</h4>
       <div id="rulesList">
